2.83.2 not opening a 2.82a project correctly #78960

Closed
opened 2020-07-15 19:09:20 +02:00 by Rogério Dec · 14 comments

System Information
Operating system: Windows 10 x64
Graphics card: Nvidia GTX 1060 6Gb

Blender Version
Broken: 2.83.2
Worked: 2.82.a

Short description of error
I made some projects 2 months ago with Blender 2.82a.
I updated Blender to the 2.83.2 some days ago.
But today I opened this attached project and to my surprise, almost all objects were disappeared.

https://cdn.discordapp.com/attachments/506192854066921478/732995807963251241/unknown.png
https://cdn.discordapp.com/attachments/506192854066921478/732995829199274054/unknown.png

Investigating a little I found them in Blender File view.
https://cdn.discordapp.com/attachments/506192854066921478/732998416581525534/unknown.png

Trying to recover them, right-clicking on "Instance to scene" it crashes Blender 2.83.2:
https://cdn.discordapp.com/attachments/506192854066921478/732999958826844301/unknown.png

I just downloaded Blender 2.82a again (where I made the current project) and the project opens ok...
https://cdn.discordapp.com/attachments/506192854066921478/733002274938290206/unknown.png

Opening the file in 2.82a and saving it with a new name and opening in 2.83.2... the same problem happens...

Exact steps for others to reproduce the error
divisor282a.blend

Open file with Blender 2.82a then with recent build

**System Information** Operating system: Windows 10 x64 Graphics card: Nvidia GTX 1060 6Gb **Blender Version** Broken: 2.83.2 Worked: 2.82.a **Short description of error** I made some projects 2 months ago with Blender 2.82a. I updated Blender to the 2.83.2 some days ago. But today I opened this attached project and to my surprise, almost all objects were disappeared. https://cdn.discordapp.com/attachments/506192854066921478/732995807963251241/unknown.png https://cdn.discordapp.com/attachments/506192854066921478/732995829199274054/unknown.png Investigating a little I found them in Blender File view. https://cdn.discordapp.com/attachments/506192854066921478/732998416581525534/unknown.png Trying to recover them, right-clicking on "Instance to scene" it crashes Blender 2.83.2: https://cdn.discordapp.com/attachments/506192854066921478/732999958826844301/unknown.png I just downloaded Blender 2.82a again (where I made the current project) and the project opens ok... https://cdn.discordapp.com/attachments/506192854066921478/733002274938290206/unknown.png Opening the file in 2.82a and saving it with a new name and opening in 2.83.2... the same problem happens... **Exact steps for others to reproduce the error** [divisor282a.blend](https://archive.blender.org/developer/F8697443/divisor282a.blend) Open file with Blender 2.82a then with recent build
Author

Added subscriber: @rogeriodec

Added subscriber: @rogeriodec

blender/blender-addons#79936 was marked as duplicate of this issue

blender/blender-addons#79936 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Note that data (collections) are still there, they are just not instanced/linked anymore in the view layer...

Note that data (collections) are still there, they are just not instanced/linked anymore in the view layer...

the problem is actually that your Cantos collection has an empty instancing that collection, this creates a very bad infinite loop. It used to be badly checked and somewhat not crashing in older versions, but this is now strictly forbidden, and seriously crashing in depsgraph evaluation when instanciated in a scene.

But even current master seems to not behave properly when instanciating this, will check further

the problem is actually that your Cantos collection has an empty instancing that collection, this creates a very bad infinite loop. It used to be badly checked and somewhat not crashing in older versions, but this is now strictly forbidden, and seriously crashing in depsgraph evaluation when instanciated in a scene. But even current master seems to not behave properly when instanciating this, will check further
Author

Great, now I can fix this problem in my projects and back to 2.32.2.
Thanks for your attention!

Great, now I can fix this problem in my projects and back to 2.32.2. Thanks for your attention!
Bastien Montagne self-assigned this 2020-07-20 16:52:38 +02:00

This issue was referenced by 7484e45297

This issue was referenced by 7484e4529717a61277525bbb6bc9ac7a747e42f1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

In #78960#982323, @mont29 wrote:
the problem is actually that your Cantos collection has an empty instancing that collection, this creates a very bad infinite loop. It used to be badly checked and somewhat not crashing in older versions, but this is now strictly forbidden, and seriously crashing in depsgraph evaluation when instanciated in a scene.

But even current master seems to not behave properly when instanciating this, will check further

Please, could you show me how to find this "empty instancing" of Cantos collection? Where is it? Sorry, I'm a beginner and I couldn't find it.

> In #78960#982323, @mont29 wrote: > the problem is actually that your Cantos collection has an empty instancing that collection, this creates a very bad infinite loop. It used to be badly checked and somewhat not crashing in older versions, but this is now strictly forbidden, and seriously crashing in depsgraph evaluation when instanciated in a scene. > > But even current master seems to not behave properly when instanciating this, will check further Please, could you show me how to find this "empty instancing" of Cantos collection? Where is it? Sorry, I'm a beginner and I couldn't find it.
Author

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'
Author

I have to reopen this ticked:

the problem is actually that your Cantos collection has an empty instancing that collection, this creates a very bad infinite loop.

I tried to remove all objects of the name "Cantos" and save the project to a new file, then open it with 2.83.2, 2.83.3, 2.90.0, and 2.91.0 versions. No of them got to open the project correctly, nor was he able to open the original project for this ticket.

I have to reopen this ticked: > the problem is actually that your Cantos collection has an empty instancing that collection, this creates a very bad infinite loop. I tried to remove all objects of the name "Cantos" and save the project to a new file, then open it with 2.83.2, 2.83.3, 2.90.0, and 2.91.0 versions. No of them got to open the project correctly, nor was he able to open the original project for this ticket.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78960
No description provided.