Fix T78960: 2.83.2 not opening a 2.82a project correctly.

That project cannot be opened correctly ayway, it has recursive
collections intanciating themselves...

But at least now we have a check at startup to detect and 'fix' those
nasty cycles in collections.